--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name"         : "node-red-contrib-ldap",
+    "name"         : "node-red-contrib-nfc",
     "version"      : "0.0.1",
     "description"  : "A NFC node for Node-RED",
     "dependencies": {
