--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name"         : "node-red-contrib-nfc",
-    "version"      : "0.0.1",
+    "version"      : "0.0.2",
     "description"  : "A NFC node for Node-RED",
     "dependencies": {
-        "nfc": "https://github.com/hardillb/node-nfc/archive/master.tar.gz"
+        "nfc": "*"
     },
     "license": "Apache",
     "repository" : {
